--- a/templates/index.html
+++ b/templates/index.html
@@ -9,26 +9,32 @@
 </head>
 
      <body>
-       
-
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     
     <ul class="nav navbar-nav">
-	  	  <li><a  href="index.html" style="color:Violet;">Home</a></li>
-	  <li><a href="Appointment_Information.html" style="color:Violet;">Appointment Information</a></li>
-	  <li ><a href="Appointment_History.html" style="color:Violet;">Appointment History</a></li>
-	        <li><a href="login.html" style="color:Violet;">Logout</a></li>
+	  	  <li><a  href="home" style="color:whitesmoke;">Home</a></li>
+	  <li><a href="info" style="color:whitesmoke;">Appointment Information</a></li>
+	  <li ><a href="history" style="color:whitesmoke;">Appointment History</a></li>
+        <li ><a href="vaccine" style="color:whitesmoke;">My Vaccine History</a></li>
+         <li ><a href="children" style="color:whitesmoke;">My Children</a></li>
+	        <li><a href="logout" style="color:whitesmoke;">Logout</a></li>
       
     </ul>
   </div>
 </nav>
-<center>
-	   
-	   <h1 style="color:Violet;">Welcome to Hospital Appointment System  </h1>
+<center >
+	   <h1 style="color:#181b21; margin-top: 50px; margin-bottom: 50px">Welcome to Hospital Appointment System  </h1>
+    <div class="row justify-content-center">
+
+           <a href="/appointment" class="btn btn-primary btn-lg">Book An Appointment</a>
+        <a href="/addvaccine" class="btn btn-primary btn-lg">Add a Vaccine</a>
+        <a href="/addchildren" class="btn btn-primary btn-lg">Add a Child</a>
+        <a href="/addchronic" class="btn btn-primary btn-lg">Add Chronic Disease</a>
 
 
-
+    </div>
+</center>
 
 
 </body>
