--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -2,20 +2,41 @@
 
 {% extends "prelogin-layout.html" %}
 
-{% block title %}Register {% endblock title%}
+{% block title %} Login {% endblock title%}
 
 {% block content %}
-	<h1>Hospital Appointment System</h1>
-	
-	<form action = "{{url_for('login')}}", method = "POST">
-		
-		{{ displayField(form.username,'Username', autocomplete = "off", autofocus = true )}}
-		{{ displayField(form.password,'Password')}}
-		{{ displayField(form.confirm_pswd,'Retype Password')}}
-		
-		<div>
-			{{ form.submit_button }}	
-		</div>
-		{{form.csrf_token}}
-	</form>
+    <div class="container mt-3">
+        <div class="row justify-content-center mb-3">
+            <h1 class="col-6">Hospital Appointment System</h1>
+        </div>
+
+        <div class="row justify-content-center">
+
+            <div class="col-4">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <ul class="flashes">
+                            {% for message in messages %}
+                            <div class="message_flash">{{ message }}</div>
+                            {% endfor %}
+                         </ul>
+                    {% endif %}
+                {% endwith %}
+
+                <form action = "{{url_for('login')}}", method = "POST">
+
+                    {{ displayField(form.username,'Username', autocomplete = "off", autofocus = true )}}
+                    {{ displayField(form.password,'Password')}}
+                    <div class="row justify-content-center mt-4 mb-4">
+                        <div class="col-md-6">
+                            {{ form.submit_button(class_='btn btn-primary btn-lg btn-block  ') }}
+                        </div>
+                    </div>
+                    <p>If you don't have an account, <a href="register">register here!</a></p>
+                    {{form.csrf_token}}
+                </form>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
