--- a/templates/style.css
+++ b/templates/style.css
@@ -16,7 +16,7 @@ body{
 	width: 300px;
 	height: 300px;
 	border: 2px solid;
-	color: pink;
+	color: #95d4ff;
 }
 
 .h1-about{
@@ -30,7 +30,7 @@ body{
     line-height: 25px;
     padding-bottom: 55px;
     position: relative;
-	color: purple;
+	color: #004880;
 }
 
 .image-css{
@@ -40,7 +40,7 @@ body{
 .tables{
 	width: 50%;
 	text-align: center;
-color:purple;
+color: #1f0180;
 }
 
 
